--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -10,7 +10,7 @@ font:
     style: 'Medium'
   
   bold:
-    family: 'JetBrainsMono Nerd Font Mono'
+    family: 'JetBrainsMono Nerd Font'
     style: 'Bold'
   
   italic:
@@ -21,14 +21,14 @@ font:
     family: 'JetBrainsMono Nerd Font'
     style: 'Bold Italic'
 
-  size: 10
+  size: 11
 
   glyph_offset:
     x: 0
     y: 0
 
 window:
-  opacity: 0.90
+  opacity: 0.95
   padding:
     x: 10
     y: 10
